edits to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-"Kia ora ao mārama (hello world!)" 
+<!DOCTYPE html>
+<html> 
+<<head>
+  <meta charset="utf-8">
+  <title>Home page</title>
+</head>
+
+<body>
+  <h1>Home</h1>
+</body>
+
+
+
+
+</html>
