linked blogs to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <body>
   <h1>Home</h1>
+  <h2>Links to Blog posts</h2>
+  <a href="https://github.com/josh-jacobsen/josh-jacobsen.github.io/blob/master/blog/c1-reflection-blog-html">Reflections</a>
+  <a href="https://github.com/josh-jacobsen/josh-jacobsen.github.io/blob/master/blog/c1-reflection-blog-html">Time and Habits</a>
 </body>
 
 
