--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <h1>Home</h1>
   <h2>Links to Blog posts</h2>
-  <a href="https://github.com/josh-jacobsen/josh-jacobsen.github.io/blob/master/blog/c1-reflection-blog-html">Reflections</a>
-  <a href="https://github.com/josh-jacobsen/josh-jacobsen.github.io/blob/master/blog/c1-reflection-blog-html">Time and Habits</a>
+  <a href="blog/c1-reflection-blog-html">Reflections</a>
+  <a href="blog/c1-time-and-habits-blog">Time and Habits</a>
 </body>
 
 
