updates to href links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Home</h1>
   <h2>Links to Blog posts</h2>
-  <a href="blog/c1-reflection-blog-html">Reflections</a>
+  <a href="blog/c1-reflection-blog.html">Reflections</a>
   <a href="blog/c1-time-and-habits-blog">Time and Habits</a>
 </body>
 
