further updates to href links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Home</h1>
   <h2>Links to Blog posts</h2>
   <a href="blog/c1-reflection-blog.html">Reflections</a>
-  <a href="blog/c1-time-and-habits-blog">Time and Habits</a>
+  <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
 </body>
 
 
