Home page and blog pages updated, and css added

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Home page</title>
+  <link href="styles/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <h1>Home</h1>
+  <h1 class="center">Home</h1>
   <h2>Links to Blog posts</h2>
   <a href="blog/c1-reflection-blog.html">Reflections</a>
   <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
 </body>
-
 
 
 
