--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html>
 <head>
   <meta charset="utf-8">
   <title>Home page</title>
@@ -7,10 +7,17 @@
 </head>
 
 <body>
-  <h1 class="center">Home</h1>
-  <h2>Links to Blog posts</h2>
-  <a href="blog/c1-reflection-blog.html">Reflections</a>
-  <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
+  <div class="flex-container" id="header">
+    <h1>Welcome</h1>
+    <h3>Please scroll down to see my blog posts</h3>
+  </div>
+  <div class="flex-container" id="content">
+
+    <h2>Links to Blog posts</h2>
+    <a href="blog/c1-reflection-blog.html">Reflections</a>
+    <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
+
+  </div>
 </body>
 
 
