--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h2>Links to Blog posts</h2>
     <a href="blog/c1-reflection-blog.html">Reflections</a>
     <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
+    <a href="blog/t2-html-css-dom-p1.html">HTML, CSS, and DOM Part 1</a>
+    <a href="blog/t2-html-css-dom-p2.html">HTML, CSS, and DOM Part 2</a>
 
   </div>
 </body>
