--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
     <a href="blog/t2-html-css-dom-p1.html">HTML, CSS, and DOM Part 1</a>
     <a href="blog/t2-html-css-dom-p2.html">HTML, CSS, and DOM Part 2</a>
+    <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
 
   </div>
 </body>
