working on github site

--- a/index.html
+++ b/index.html
@@ -7,20 +7,75 @@
 </head>
 
 <body>
-  <div class="flex-container" id="header">
+
+  <header>
     <h1>Welcome</h1>
     <h3>Please scroll down to see my blog posts</h3>
-  </div>
-  <div class="flex-container" id="content">
+  </header>
 
-    <h2>Links to Blog posts</h2>
-    <a href="blog/c1-reflection-blog.html">Reflections</a>
-    <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
-    <a href="blog/t2-html-css-dom-p1.html">HTML, CSS, and DOM Part 1</a>
-    <a href="blog/t2-html-css-dom-p2.html">HTML, CSS, and DOM Part 2</a>
-    <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
+  <article>
+
+    <div>
+      <div class="row">
+        <div class="col-12">
+          <div class="outer_div">
+            <div class="inner_div">
+              <h2>Main Links to Blog Posts</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-3">
+          <a href="blog/c1-reflection-blog.html">Reflections</a>
+        </div>
+        <div class="col-3">
+          <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
+        </div>
+        <div class="col-3">
+          <a href="blog/t2-html-css-dom-p1.html">HTML, CSS, and DOM Part 1</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-3">
+          <a href="blog/t2-html-css-dom-p2.html">HTML, CSS, and DOM Part 2</a>
+        </div>
+          <div class="col-3">
+            <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
+        </div>
+          <div class="col-3">
+
+        </div>
+
+
+      </div>
+    </article>
+  </div>
+
+
+
+
+
+<!--
+
+    </div>
+
+    <div id="blogs">
+
+      <h2 class="flex-container">Links to Blog posts</h2>
+      <a href="blog/c1-reflection-blog.html">Reflections</a>
+      <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
+      <a href="blog/t2-html-css-dom-p1.html">HTML, CSS, and DOM Part 1</a>
+      <a href="blog/t2-html-css-dom-p2.html">HTML, CSS, and DOM Part 2</a>
+      <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
+
+    </div>
 
   </div>
+-->
+
+
+
 </body>
 
 
