added comments to code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+<!-- this is the header-->
   <header>
     <h1>Welcome</h1>
     <h3>Please scroll down to see my blog posts</h3>
