--- a/index.html
+++ b/index.html
@@ -9,75 +9,42 @@
 <body>
 <!-- this is the header-->
   <header>
-    <h1>Welcome</h1>
-    <h3>Please scroll down to see my blog posts</h3>
+    <div class="header_box">
+      <h3>Passionate</h3>
+      <h1>Welcome</h1>
+      <h3>Please scroll down to see my blog posts</h3>
+    </div>
   </header>
 
-  <article>
-
-    <div>
-      <div class="row">
-        <div class="col-12">
-          <div class="outer_div">
-            <div class="inner_div">
-              <h2>Main Links to Blog Posts</h2>
-            </div>
-          </div>
-        </div>
+  <article class="content">
+    <section class="blog_heading">
+      <div class="inner_blog_heading">
+        <h2>Links to Blog Posts</h2>
       </div>
-      <div class="row">
-        <div class="col-3">
+    </section>
+
+    <section class="blog_entries">
+        <div class="inner_div">
           <a href="blog/c1-reflection-blog.html">Reflections</a>
         </div>
-        <div class="col-3">
+        <div class="inner_div">
           <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
         </div>
-        <div class="col-3">
+        <div class="inner_div">
           <a href="blog/t2-html-css-dom-p1.html">HTML, CSS, and DOM Part 1</a>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-3">
+        <div class="inner_div">
           <a href="blog/t2-html-css-dom-p2.html">HTML, CSS, and DOM Part 2</a>
         </div>
-          <div class="col-3">
-            <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
+        <div class="inner_div">
+          <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
         </div>
-          <div class="col-3">
-
+        <div class="inner_div">
         </div>
-
-
       </div>
-    </article>
-  </div>
-
-
-
-
-
-<!--
-
-    </div>
-
-    <div id="blogs">
-
-      <h2 class="flex-container">Links to Blog posts</h2>
-      <a href="blog/c1-reflection-blog.html">Reflections</a>
-      <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
-      <a href="blog/t2-html-css-dom-p1.html">HTML, CSS, and DOM Part 1</a>
-      <a href="blog/t2-html-css-dom-p2.html">HTML, CSS, and DOM Part 2</a>
-      <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
-
-    </div>
-
-  </div>
--->
-
-
+    </section>
+  </article>
 
 </body>
-
-
 
 </html>
