--- a/index.html
+++ b/index.html
@@ -1,50 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Home page</title>
-  <link href="styles/main.css" rel="stylesheet" type="text/css">
-</head>
+  <head>
+    <title></title>
+    <meta charset="UTF-8">
 
-<body>
-<!-- this is the header-->
-  <header>
-    <div class="header_box">
-      <h3>Passionate</h3>
-      <h1>Welcome</h1>
-      <h3>Please scroll down to see my blog posts</h3>
-    </div>
-  </header>
+  </head>
+  <body>
 
-  <article class="content">
-    <section class="blog_heading">
-      <div class="inner_blog_heading">
-        <h2>Links to Blog Posts</h2>
-      </div>
-    </section>
-
-    <section class="blog_entries">
-        <div class="inner_div">
-          <a href="blog/c1-reflection-blog.html">Reflections</a>
-        </div>
-        <div class="inner_div">
-          <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
-        </div>
-        <div class="inner_div">
-          <a href="blog/t2-html-css-dom-p1.html">HTML, CSS, and DOM Part 1</a>
-        </div>
-        <div class="inner_div">
-          <a href="blog/t2-html-css-dom-p2.html">HTML, CSS, and DOM Part 2</a>
-        </div>
-        <div class="inner_div">
-          <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
-        </div>
-        <div class="inner_div">
-        </div>
-      </div>
-    </section>
-  </article>
-
-</body>
-
+  </body>
 </html>
