Initialize skeleton css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <meta charset="UTF-8">
+<head>
+  <title></title>
+  <meta charset="UTF-8">
 
-  </head>
-  <body>
+  <!-- Mobile Specific Metas
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  </body>
+<!-- FONT
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+<!-- CSS
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+  <link rel="stylesheet" type="text/css" href="styles/skeleton.css">
+  <link rel="stylesheet" type="text/css" href="styles/main.css">
+
+<!-- Favicon
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+</head>
+
+<body>
+  <section class="landing-page"><!-- landing page -->
+    <div class="container">
+      <div class="row">
+        <div class="one-half column border">
+          <h4>Welcome</h4>
+          <p>
+
+          </p>
+        </div>
+      </div><!-- end of row -->
+    </div><!-- end of container -->
+  </section><!-- end of landing page -->
+
+  <section><!-- about me section -->
+    <div class="container">
+      <div class="row">
+        <div class="one-half column border">
+          <div class="box">
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+
+
+
+  </section><!-- end of about me section -->
+
+
+
+
+</body>
 </html>
