added sections and headings

--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
   <title></title>
   <meta charset="UTF-8">
 
-  <!-- Mobile Specific Metas
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Mobile Specific Metas-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- FONT
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- FONT -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-<!-- CSS
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 
-<!-- Favicon
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Favicon-->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
@@ -41,24 +37,52 @@
   <section><!-- about me section -->
     <div class="container">
       <div class="row">
+        <div class="twelve columns">
+          <h2 class="text-center">About me</h2>
+        </div>
+      </div><!-- end of row -->
+      <div class="row">
         <div class="one-half column border">
           <div class="box">
 
           </div>
-
         </div>
-
-      </div>
-
-    </div>
-
-
-
-
+      </div><!-- end of row -->
+    </div><!-- end of container -->
   </section><!-- end of about me section -->
 
+  <section><!-- blog posts section -->
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns">
+          <h2 class="text-center">Blog posts</h2>
+        </div>
+      </div><!-- end of row -->
+      <div class="row">
+        <div class="one-half column border">
+          <div class="box">
+          </div>
+        </div>
+      </div><!-- end of row -->
+    </div><!-- end of container -->
+  </section><!-- end of blog posts section -->
 
+  <section><!-- contact me section -->
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns">
+          <h2 class="text-center">Contact me</h2>
+        </div>
+      </div><!-- end of row -->
+      <div class="row">
+        <div class="one-half column border">
+          <div class="box">
 
+          </div>
+        </div>
+      </div><!-- end of row -->
+    </div><!-- end of container -->
+  </section><!-- end of contact me section -->
 
 </body>
 </html>
