landing page update

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
 
 <body>
   <section class="landing-page"><!-- landing page -->
-    <div class="container">
-      <div class="row">
-        <div class="one-half column border">
-          <h4>Welcome</h4>
-          <p>
+    <div class="header-box">
+      <p>
+        <em>Passionate</em>
+      </p>
+      <p>
+        <strong>Full Stack Developer</strong>
+      </p>
+      <p>
+        In training
+      </p>
+    </div>
 
-          </p>
-        </div>
-      </div><!-- end of row -->
-    </div><!-- end of container -->
   </section><!-- end of landing page -->
 
   <section><!-- about me section -->
