--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
         </div>
       </div><!-- end of row -->
       <div class="row">
-        <div class="one-half column border">
-          <div class="box">
-          </div>
+        <div class="six columns border">
+          <img class="blog-image" src="images/turn.jpg" alt="turn">
+        </div>
+        <div class="three columns border">
+        </div>
+        <div class="three columns border">
         </div>
       </div><!-- end of row -->
     </div><!-- end of container -->
