added images to Blog section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center">About me</h2>
+          <h2 class="text-center padding">About me</h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
@@ -57,16 +57,35 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center">Blog posts</h2>
+          <h2 class="text-center padding">Blog posts</h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
-        <div class="six columns border">
+        <div class="four columns border">
+          <img class="blog-image" src="images/kitesurf.jpg" alt="kites">
+          <h5 class="text-center">Technical Blog</h5>
+        </div>
+        <div class="four columns border">
+          <img class="blog-image" src="images/canoes.jpg" alt="canoes">
+          <h5 class="text-center">Technical Blog</h5>
+        </div>
+        <div class="four columns border">
           <img class="blog-image" src="images/turn.jpg" alt="turn">
+          <h5 class="text-center">Technical Blog</h5>
         </div>
-        <div class="three columns border">
+      </div><!-- end of row -->
+            <div class="row">
+        <div class="four columns border">
+          <img class="blog-image" src="images/kitesurf.jpg" alt="kites">
+          <h5 class="text-center">Technical Blog</h5>
         </div>
-        <div class="three columns border">
+        <div class="four columns border">
+          <img class="blog-image" src="images/canoes.jpg" alt="canoes">
+          <h5 class="text-center">Technical Blog</h5>
+        </div>
+        <div class="four columns border">
+          <img class="blog-image" src="images/turn.jpg" alt="turn">
+          <h5 class="text-center">Technical Blog</h5>
         </div>
       </div><!-- end of row -->
     </div><!-- end of container -->
@@ -76,7 +95,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center">Contact me</h2>
+          <h2 class="text-center padding">Contact me</h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
