added dates to blog posts

--- a/index.html
+++ b/index.html
@@ -63,29 +63,47 @@
       <div class="row">
         <div class="four columns border">
           <img class="blog-image" src="images/kitesurf.jpg" alt="kites">
-          <h5 class="text-center">Technical Blog</h5>
+          <h5 class="blog-text">Technical Blog</h5>
+          <p class="blog-text">
+            16th March 2016
+          </p>
         </div>
         <div class="four columns border">
           <img class="blog-image" src="images/canoes.jpg" alt="canoes">
-          <h5 class="text-center">Technical Blog</h5>
+          <h5 class="blog-text">Technical Blog</h5>
+          <p class="blog-text">
+            16th March 2016
+          </p>
         </div>
         <div class="four columns border">
           <img class="blog-image" src="images/turn.jpg" alt="turn">
-          <h5 class="text-center">Technical Blog</h5>
+          <h5 class="blog-text">Technical Blog</h5>
+          <p class="blog-text">
+            16th March 2016
+          </p>
         </div>
       </div><!-- end of row -->
             <div class="row">
         <div class="four columns border">
           <img class="blog-image" src="images/kitesurf.jpg" alt="kites">
-          <h5 class="text-center">Technical Blog</h5>
+          <h5 class="blog-text">Technical Blog</h5>
+          <p class="blog-text">
+            16th March 2016
+          </p>
         </div>
         <div class="four columns border">
           <img class="blog-image" src="images/canoes.jpg" alt="canoes">
-          <h5 class="text-center">Technical Blog</h5>
+          <h5 class="blog-text">Technical Blog</h5>
+          <p class="blog-text">
+            16th March 2016
+          </p>
         </div>
         <div class="four columns border">
           <img class="blog-image" src="images/turn.jpg" alt="turn">
-          <h5 class="text-center">Technical Blog</h5>
+          <h5 class="blog-text">Technical Blog</h5>
+          <p class="blog-text">
+            16th March 2016
+          </p>
         </div>
       </div><!-- end of row -->
     </div><!-- end of container -->
