added draft nav bar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
 <body>
   <section class="landing-page"><!-- landing page -->
+    <nav class="primary">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Useful Resources</a></li>
+      </ul>
+    </nav>
+
     <div class="header-box">
       <p>
         <em>Passionate</em>
@@ -122,6 +132,33 @@
 
           </div>
         </div>
+      </div><!-- end of row -->
+    </div><!-- end of container -->
+  </section><!-- end of contact me section -->
+
+  <section><!-- resources section -->
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns">
+          <h2 class="text-center padding">Useful Resources</h2>
+        </div>
+      </div><!-- end of row -->
+      <div class="row">
+        <div class="four columns">
+          <ul>
+            <li><a href="https://www.w3.org/TR/CSS2/selector.html">CSS Selectors</a></li>
+          </ul>
+        </div><!-- end of four columns -->
+        <div class="four columns">
+          <ul>
+            <li><a href="https://www.w3.org/TR/CSS2/selector.html">CSS Selectors</a></li>
+          </ul>
+        </div><!-- end of four columns -->
+        <div class="four columns">
+          <ul>
+            <li><a href="https://www.w3.org/TR/CSS2/selector.html">CSS Selectors</a></li>
+          </ul>
+        </div><!-- end of four columns -->
       </div><!-- end of row -->
     </div><!-- end of container -->
   </section><!-- end of contact me section -->
