--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About Me</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="#">Blog Entries</a>
+            <ul>
+              <li><a href="#">Tech Blog 1</a></li>
+              <li><a href="#">Tech Blog 2</a></li>
+              <li><a href="#">Tech Blog 3</a></li>
+            </ul>
+          </li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Useful Resources</a></li>
       </ul>
