--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
 
 <body>
   <section class="landing-page"><!-- landing page -->
-    <nav class="primary">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Blog Entries</a>
-            <ul>
-              <li><a href="#">Tech Blog 1</a></li>
-              <li><a href="#">Tech Blog 2</a></li>
-              <li><a href="#">Tech Blog 3</a></li>
-            </ul>
-          </li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Useful Resources</a></li>
-      </ul>
-    </nav>
+
+
+      <nav class="primary">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Me</a></li>
+          <li><a href="#">Latest Blog Entries</a>
+              <ul>
+                <li><a href="#">Tech Blog 1</a></li>
+                <li><a href="#">Tech Blog 2</a></li>
+                <li><a href="#">Tech Blog 3</a></li>
+              </ul>
+            </li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Useful Resources</a></li>
+        </ul>
+      </nav>
 
     <div class="header-box">
       <p>
