revoved box from nav menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 <body>
   <section class="landing-page"><!-- landing page -->
 
-
       <nav class="primary">
         <ul>
           <li><a href="#">Home</a></li>
@@ -48,7 +47,7 @@
         <strong>Full Stack Developer</strong>
       </p>
       <p>
-        In training
+        <em>In training</em>
       </p>
     </div>
 
