Added section links

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
       <nav class="primary">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Latest Blog Entries</a>
+          <li><a href="#aboutme">About Me</a></li>
+          <li><a href="#blog">Latest Blog Entries</a>
               <ul>
                 <li><a href="#">Tech Blog 1</a></li>
                 <li><a href="#">Tech Blog 2</a></li>
                 <li><a href="#">Tech Blog 3</a></li>
               </ul>
             </li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Useful Resources</a></li>
+          <li><a href="#contactme">Contact</a></li>
+          <li><a href="#resources">Useful Resources</a></li>
         </ul>
       </nav>
 
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center padding">About me</h2>
+          <h2 class="text-center padding"><a name="aboutme">About me</a></h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center padding">Blog posts</h2>
+          <h2 class="text-center padding"><a name="blog">Blog posts</a></h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
@@ -130,7 +130,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center padding">Contact me</h2>
+          <h2 class="text-center padding"><a name="contactme">Contact me</a></h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
@@ -147,7 +147,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center padding">Useful Resources</h2>
+          <h2 class="text-center padding"><a name="resources">Useful Resources</a></h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
