changed hyperlink hover properties

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav class="primary">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#aboutme">About Me</a></li>
+          <li><a href="#">About Me</a></li>
           <li><a href="#blog">Latest Blog Entries</a>
               <ul>
                 <li><a href="#">Tech Blog 1</a></li>
@@ -57,15 +57,14 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center padding"><a name="aboutme">About me</a></h2>
+          <h2 class="section-heading">About me</h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
-        <div class="one-half column border">
-          <div class="box">
-
-          </div>
-        </div>
+        <div class="six columns box">
+        </div><!-- end of six columns -->
+        <div class="six columns box">
+        </div><!-- end of six columns -->
       </div><!-- end of row -->
     </div><!-- end of container -->
   </section><!-- end of about me section -->
@@ -74,25 +73,25 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center padding"><a name="blog">Blog posts</a></h2>
+          <h2 class="section-heading"><a name="blog">Blog posts</a></h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
-        <div class="four columns border">
+        <div class="four columns">
           <img class="blog-image" src="images/kitesurf.jpg" alt="kites">
           <h5 class="blog-text">Technical Blog</h5>
           <p class="blog-text">
             16th March 2016
           </p>
         </div>
-        <div class="four columns border">
+        <div class="four columns">
           <img class="blog-image" src="images/canoes.jpg" alt="canoes">
           <h5 class="blog-text">Technical Blog</h5>
           <p class="blog-text">
             16th March 2016
           </p>
         </div>
-        <div class="four columns border">
+        <div class="four columns">
           <img class="blog-image" src="images/turn.jpg" alt="turn">
           <h5 class="blog-text">Technical Blog</h5>
           <p class="blog-text">
@@ -100,22 +99,22 @@
           </p>
         </div>
       </div><!-- end of row -->
-            <div class="row">
-        <div class="four columns border">
+      <div class="row">
+        <div class="four columns">
           <img class="blog-image" src="images/kitesurf.jpg" alt="kites">
           <h5 class="blog-text">Technical Blog</h5>
           <p class="blog-text">
             16th March 2016
           </p>
         </div>
-        <div class="four columns border">
+        <div class="four columns">
           <img class="blog-image" src="images/canoes.jpg" alt="canoes">
           <h5 class="blog-text">Technical Blog</h5>
           <p class="blog-text">
             16th March 2016
           </p>
         </div>
-        <div class="four columns border">
+        <div class="four columns">
           <img class="blog-image" src="images/turn.jpg" alt="turn">
           <h5 class="blog-text">Technical Blog</h5>
           <p class="blog-text">
@@ -130,14 +129,11 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center padding"><a name="contactme">Contact me</a></h2>
+          <h2 class="section-heading"><a name="contactme">Contact me</a></h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
-        <div class="one-half column border">
-          <div class="box">
-
-          </div>
+        <div class="twelve columns box">
         </div>
       </div><!-- end of row -->
     </div><!-- end of container -->
@@ -147,21 +143,21 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="text-center padding"><a name="resources">Useful Resources</a></h2>
+          <h2 class="section-heading"><a name="resources">Useful Resources</a></h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
-        <div class="four columns">
+        <div class="four columns box">
           <ul>
             <li><a href="https://www.w3.org/TR/CSS2/selector.html">CSS Selectors</a></li>
           </ul>
         </div><!-- end of four columns -->
-        <div class="four columns">
+        <div class="four columns box">
           <ul>
             <li><a href="https://www.w3.org/TR/CSS2/selector.html">CSS Selectors</a></li>
           </ul>
         </div><!-- end of four columns -->
-        <div class="four columns">
+        <div class="four columns box">
           <ul>
             <li><a href="https://www.w3.org/TR/CSS2/selector.html">CSS Selectors</a></li>
           </ul>
