Added Cultural and Technical Blog Posts

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About Me</a></li>
-          <li><a href="#blog">Latest Blog Entries</a>
+          <li><a href="#blog">Latest Blog Posts</a>
               <ul>
-                <li><a href="#">Tech Blog 1</a></li>
-                <li><a href="#">Tech Blog 2</a></li>
-                <li><a href="#">Tech Blog 3</a></li>
+                <li><a href="blog/c3-meditation-process.html">Cultural Blog 3</a></li>
+                <li><a href="blog/t3-design-to-web-blog.html">Technical Blog 3</a></li>
               </ul>
             </li>
           <li><a href="#contactme">Contact</a></li>
@@ -76,50 +75,56 @@
           <h2 class="section-heading"><a name="blog">Blog posts</a></h2>
         </div>
       </div><!-- end of row -->
+
       <div class="row">
-        <div class="four columns">
-          <img class="blog-image" src="images/kitesurf.jpg" alt="kites">
-          <h5 class="blog-text">Technical Blog</h5>
-          <p class="blog-text">
-            16th March 2016
-          </p>
-        </div>
-        <div class="four columns">
-          <img class="blog-image" src="images/canoes.jpg" alt="canoes">
-          <h5 class="blog-text">Technical Blog</h5>
-          <p class="blog-text">
-            16th March 2016
-          </p>
-        </div>
-        <div class="four columns">
-          <img class="blog-image" src="images/turn.jpg" alt="turn">
-          <h5 class="blog-text">Technical Blog</h5>
-          <p class="blog-text">
-            16th March 2016
-          </p>
-        </div>
+
+          <div class="four columns">
+            <a href="blog/c3-meditation-process.html"><img class="blog-image" src="images/kitesurf.jpg" alt="kites">
+            <h5 class="blog-text">Cultural Blog 3: Meditation and Process</h5>
+            <p class="blog-text">
+              4th April 2016
+            </p></a>
+            <!-- <a href="/blog/t3-design-to-web-blog.html"> -->
+          </div>
+
+
+          <div class="four columns">
+            <a href="blog/t3-design-to-web-blog.html"><img class="blog-image" src="images/canoes.jpg" alt="canoes">
+            <h5 class="blog-text">Technical Blog 3: Design to Web</h5>
+            <p class="blog-text">
+              2nd April 2016
+            </p></a>
+          </div>
+
+          <div class="four columns">
+            <a href="blog/t2-html-css-dom-p2.html"><img class="blog-image" src="images/turn.jpg" alt="turn">
+            <h5 class="blog-text">Technical Blog 2: HMTL, CSS, and DOM (Part 2) </h5>
+            <p class="blog-text">
+              23rd March 2016
+            </p></a>
+          </div>
       </div><!-- end of row -->
       <div class="row">
         <div class="four columns">
-          <img class="blog-image" src="images/kitesurf.jpg" alt="kites">
-          <h5 class="blog-text">Technical Blog</h5>
+          <a href="blog/t2-html-css-dom-p1.html"><img class="blog-image" src="images/bay.jpg" alt="Bay">
+          <h5 class="blog-text">Technical Blog 2: HTML, CSS, and DOM (Part 1)</h5>
           <p class="blog-text">
-            16th March 2016
-          </p>
+            23rd March 2016
+          </p></a>
         </div>
         <div class="four columns">
-          <img class="blog-image" src="images/canoes.jpg" alt="canoes">
-          <h5 class="blog-text">Technical Blog</h5>
+          <a href="blog/c2-emotional-intelligence.html"><img class="blog-image" src="images/kitesurfer.JPG" alt="Kitesurfer">
+          <h5 class="blog-text">Cultural Blog 2: Emotional Intelligence</h5>
           <p class="blog-text">
-            16th March 2016
-          </p>
+            17th March 2016
+          </p></a>
         </div>
         <div class="four columns">
-          <img class="blog-image" src="images/turn.jpg" alt="turn">
-          <h5 class="blog-text">Technical Blog</h5>
+          <a href="blog/c1-time-and-habits-blog.html"><img class="blog-image" src="images/petra.jpg" alt="Petra">
+          <h5 class="blog-text">Cultural Blog 1: Time and Habits</h5>
           <p class="blog-text">
             16th March 2016
-          </p>
+          </p></a>
         </div>
       </div><!-- end of row -->
     </div><!-- end of container -->
