--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <!-- FONT -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
+  <link href='https://fonts.googleapis.com/css?family=Courgette|Yesteryear|Yellowtail' rel='stylesheet' type='text/css'>
+
 <!-- CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
@@ -46,7 +48,7 @@
         <strong>Full Stack Developer</strong>
       </p>
       <p>
-        <em>In training</em>
+        <em>(in training)</em>
       </p>
     </div>
 
