Centered nav menu, changed colour to grey, and added circular photo

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About Me</a></li>
           <li><a href="#blog">Latest Blog Posts</a>
+              <!-- Children of Blog Posts Entry; not needed 
               <ul>
                 <li><a href="blog/c3-meditation-process.html">Cultural Blog 3</a></li>
                 <li><a href="blog/t3-design-to-web-blog.html">Technical Blog 3</a></li>
               </ul>
+              -->
             </li>
           <li><a href="#contactme">Contact</a></li>
           <li><a href="#resources">Useful Resources</a></li>
@@ -61,6 +63,11 @@
           <h2 class="section-heading">About me</h2>
         </div>
       </div><!-- end of row -->
+      <div class="row">
+        <div class="six columns circular offset-by-three">
+          <img class="main-photo" src="images/Gaza.JPG" alt="Photo from Gaza"> 
+        </div>
+      </div>
       <div class="row">
         <div class="six columns box">
         </div><!-- end of six columns -->
