changed background image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <link href='https://fonts.googleapis.com/css?family=Courgette|Yesteryear|Yellowtail' rel='stylesheet' type='text/css'>
 
+  <link href='https://fonts.googleapis.com/css?family=Arapey' rel='stylesheet' type='text/css'>
+
 <!-- CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
