reduced photo size and added blog posts

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About Me</a></li>
-          <li><a href="#blog">Latest Blog Posts</a>
+          <li><a href="#blog">Blog</a>
               <!-- Children of Blog Posts Entry; not needed 
               <ul>
                 <li><a href="blog/c3-meditation-process.html">Cultural Blog 3</a></li>
@@ -58,18 +58,18 @@
 
   </section><!-- end of landing page -->
 
-  <section><!-- about me section -->
+  <section><!-- about me section heading -->
     <div class="container">
       <div class="row">
         <div class="twelve columns">
           <h2 class="section-heading">About me</h2>
-        </div>
+        </div>  
       </div><!-- end of row -->
       <div class="row">
-        <div class="six columns circular offset-by-three">
-          <img class="main-photo" src="images/Gaza.JPG" alt="Photo from Gaza"> 
-        </div>
-      </div>
+        <div class="four columns circular offset-by-four">
+          <img class="profile-image" src="images/Gaza.JPG" alt="">
+        </div><!-- end of four colums -->
+      </div><!-- end of row -->
       <div class="row">
         <div class="six columns box">
         </div><!-- end of six columns -->
